<?xml version="1.0"?>
<package format="2">
  <name>ros_tool_deck</name>
  <version>0.0.1</version>
  <description>
    <p>ros_tool_deck - a meta package for a tool changer system for ROS</p>
  </description>

  <author email="admin@mik-p-online.com">michael pritchard</author>
  <maintainer email="admin@mik-p-online.com">michael pritchard</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>boost</depend>
  <depend>yaml-cpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf_conversions</depend>
  <depend>tf2_geometry_msgs</depend>

</package>
