<?xml version="1.0"?>
<package format="2">
  <name>ros_tool_deck</name>
  <version>0.0.1</version>
  <description>
    <p>ros_tool_deck - a meta package for a tool changer system for ROS</p>
  </description>

  <author email="admin@mik-p-online.com">michael pritchard</author>
  <maintainer email="admin@mik-p-online.com">michael pritchard</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>tool_deck_server</exec_depend>
  <exec_depend>tool_deck_msgs</exec_depend>

  <export>
    <metapackage />
  </export>

</package>
