<?xml version="1.0"?>
<package format="2">
  <name>tool_deck_server</name>
  <version>0.0.1</version>
  <description>
    <p>tool_deck_server - TF publisher for interchangeable tools with visualisation markers to allow dynamic configuration</p>
  </description>

  <author email="admin@mik-p-online.com">michael pritchard</author>
  <maintainer email="admin@mik-p-online.com">michael pritchard</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>boost</depend>
  <depend>yaml-cpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf_conversions</depend>
  <depend>tf2_geometry_msgs</depend>

</package>
